# telemetry-app-plugin-template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
buffer/: buffer.hpp  buffer_utils.hpp
examples/: example_1.cpp  example_2.cpp
hooks/: commit-msg
plugin/: buffer.hpp  buffer_utils.hpp  plugin.cpp  plugin.hpp
